# curso-agentes

./: 1_load_data_big_query.py  3_create_redis_index.py  4_simple_semantic_search.py  5_standard_rag_cache.py  6_semantic_cache.py  README.md  generate_embeddings.py  pyproject.toml
utils/: bigquery_utils.py  embeddings_utils.py  llm_cache.py  rag.py  redis_utils.py
